--- a/Magic_Gamma_Telescope.ipynb
+++ b/Magic_Gamma_Telescope.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6Q9kDB5uJHnLlw0Vbkki+",
+      "authorship_tag": "ABX9TyOiWwhv1V10ZfCktzZzlDZc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -61,7 +61,25 @@
       "metadata": {
         "id": "h03ZJW30sshd"
       },
-      "execution_count": 37,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1CPMop0UYbB2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3hqxF06jYa_P"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,9 +104,9 @@
           "height": 206
         },
         "id": "jV6HLtV_u2Ks",
-        "outputId": "db1ca37f-f1e9-48d3-f0ab-440213fce5b0"
+        "outputId": "19f8a9ee-e2b1-439a-c4d5-bb8c30c9106a"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -110,7 +128,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7e1439e6-8060-4c19-bf56-f87fe6ff4f99\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0a06940d-1256-487e-b12f-20ae99709e2c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -219,7 +237,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7e1439e6-8060-4c19-bf56-f87fe6ff4f99')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0a06940d-1256-487e-b12f-20ae99709e2c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -271,12 +289,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7e1439e6-8060-4c19-bf56-f87fe6ff4f99 button.colab-df-convert');\n",
+              "        document.querySelector('#df-0a06940d-1256-487e-b12f-20ae99709e2c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7e1439e6-8060-4c19-bf56-f87fe6ff4f99');\n",
+              "        const element = document.querySelector('#df-0a06940d-1256-487e-b12f-20ae99709e2c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -296,8 +314,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-0f84f3a7-6111-4aee-9d08-be3b19d13156\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0f84f3a7-6111-4aee-9d08-be3b19d13156')\"\n",
+              "<div id=\"df-fe108b62-047d-46ee-aa30-44b950afd8e9\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fe108b62-047d-46ee-aa30-44b950afd8e9')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -416,7 +434,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-0f84f3a7-6111-4aee-9d08-be3b19d13156 button');\n",
+              "        document.querySelector('#df-fe108b62-047d-46ee-aa30-44b950afd8e9 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -433,7 +451,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 3
         }
       ]
     },
@@ -447,9 +465,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wN1QleM-u7aW",
-        "outputId": "bcc62f43-3d9f-4e73-dc4a-a8d12cd30a75"
+        "outputId": "bd6dca04-8e49-489a-e4cb-48e3347f2815"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +477,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 4
         }
       ]
     },
@@ -484,15 +502,15 @@
           "height": 478
         },
         "id": "0pX98Yoh_fOw",
-        "outputId": "7518a900-57b4-4881-d1ba-36c212e299c8"
+        "outputId": "4f2d591a-2a78-4a9c-8719-6e624c779e52"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-34-71ca111c930e>:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+            "<ipython-input-5-71ca111c930e>:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
             "  df[\"class\"] = df[\"class\"].replace({\"g\": 1, \"h\": 0})\n"
           ]
         },
@@ -530,7 +548,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b6c5ef56-ee23-42bf-991b-cd9fabefb66f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b56d4305-f2c4-4322-9e6b-4d9d888e6711\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -724,7 +742,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b6c5ef56-ee23-42bf-991b-cd9fabefb66f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b56d4305-f2c4-4322-9e6b-4d9d888e6711')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -776,12 +794,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b6c5ef56-ee23-42bf-991b-cd9fabefb66f button.colab-df-convert');\n",
+              "        document.querySelector('#df-b56d4305-f2c4-4322-9e6b-4d9d888e6711 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b6c5ef56-ee23-42bf-991b-cd9fabefb66f');\n",
+              "        const element = document.querySelector('#df-b56d4305-f2c4-4322-9e6b-4d9d888e6711');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -801,8 +819,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-be1a79a3-0e95-491a-a5b9-76163378e9dc\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-be1a79a3-0e95-491a-a5b9-76163378e9dc')\"\n",
+              "<div id=\"df-ea647de4-4142-4368-b286-2585624b21b6\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ea647de4-4142-4368-b286-2585624b21b6')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -921,14 +939,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-be1a79a3-0e95-491a-a5b9-76163378e9dc button');\n",
+              "        document.querySelector('#df-ea647de4-4142-4368-b286-2585624b21b6 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_8b7547cb-b9d8-4c12-bb27-c8ba4d2798d5\">\n",
+              "  <div id=\"id_22a136a8-562d-499f-97c9-eaf371301d3b\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -972,7 +990,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_8b7547cb-b9d8-4c12-bb27-c8ba4d2798d5 button.colab-df-generate');\n",
+              "        document.querySelector('#id_22a136a8-562d-499f-97c9-eaf371301d3b button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -993,7 +1011,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 5
         }
       ]
     },
@@ -1015,9 +1033,9 @@
           "height": 1000
         },
         "id": "3JOffCJp_iOf",
-        "outputId": "b104f9f8-a786-43f8-9f38-dd44408cf06c"
+        "outputId": "7717c581-bda4-4d78-c4fd-2d811e0493e7"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1140,9 +1158,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ABqLxW2RBUeS",
-        "outputId": "5dded12e-ea24-4db8-f65c-4b5f73323093"
+        "outputId": "586cf76e-ac6c-4234-d258-231f39198b7e"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1168,12 +1186,16 @@
     {
       "cell_type": "code",
       "source": [
-        "def scale_dataset(dataframe):\n",
-        "  x = dataframe[dataframe.cols[:-1]].values\n",
-        "  y = dataframe[dataframe.cols[-1]].values\n",
+        "def scale_dataset(dataframe, oversample = False):\n",
+        "  x = dataframe[dataframe.columns[:-1]].values # Here x conatins all data values expect the last column which is \"class\" its a 2D matrix\n",
+        "  y = dataframe[dataframe.columns[-1]].values  # It contains only the last column which is \"class\" & its a 1D array\n",
         "\n",
         "  scaler = StandardScaler()\n",
-        "  x = scaler.fit_transform(x)\n",
+        "  x = scaler.fit_transform(x)#It normalizes or standardizes x to improve model performance and prevent certain features from dominating others.\n",
+        "\n",
+        "  if oversample:\n",
+        "    ros = RandomOverSampler()\n",
+        "    x, y = ros.fit_resample(x, y)\n",
         "\n",
         "  data = np.hstack((x, np.reshape(y, (-1, 1))))\n",
         "\n",
@@ -1182,7 +1204,7 @@
       "metadata": {
         "id": "HMQiiOvRDlzK"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1196,19 +1218,148 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SMkp8M3TGrxf",
-        "outputId": "4f68f728-7dbc-49b8-bd09-543951936405"
+        "outputId": "b9b8b800-3ea8-4b0d-f4f4-0442b5fb0195"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "7405\n",
-            "4007\n"
+            "7358\n",
+            "4054\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The problem in your training dataset is class imbalance because the number of gammas (7k) is significantly higher than the number of hadrons (4k). This imbalance can cause the model to be biased toward predicting the majority class (gammas) more often, leading to poor generalization.\n",
+        "How to Handle Class Imbalance?\n",
+        "Resampling the Data\n",
+        "\n",
+        "Oversampling the minority class (hadrons): Duplicate or generate synthetic hadron data using SMOTE (Synthetic Minority Over-sampling Technique).\n",
+        "\n",
+        "Undersampling the majority class (gammas): Reduce the number of gammas to balance both classes.\n",
+        "\n",
+        "Using Class Weights\n",
+        "\n",
+        "Modify the loss function to assign a higher weight to the minority class (hadrons) so that the model learns their patterns better.\n"
+      ],
+      "metadata": {
+        "id": "HT8dWrRuxCN8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train, x_train, y_train =  scale_dataset(train, oversample=True)\n",
+        "valid, x_valid, y_valid =  scale_dataset(valid, oversample=False)\n",
+        "test, x_test, y_test =  scale_dataset(test, oversample=False)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "1UpMsvAtvu4x"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(y_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lLoklrAvy4if",
+        "outputId": "eeac0231-8db7-4251-d1a4-80cc43814f3e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "14814"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(y_train[y_train == 1])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AlMIvTMky_Tf",
+        "outputId": "8aac6100-efc7-4e23-b04e-2976226629ee"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7358"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum(y_train == 0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Revo1y3PzEdJ",
+        "outputId": "7220728b-f51f-4c7e-a0a5-2268060f1930"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.int64(7358)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now through oversampling we manage both classes to same"
+      ],
+      "metadata": {
+        "id": "Oe4eXhO5zPSP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "a3kyDr5KzHlx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
